test/success/nostd/basics/scope/main.sk
module Main {

fn main() {
    let s = ();
    s;
    {
        let s = ();
        s;
    }
    s;
}

}