test/errors/safety/missing_safe_extern_call/main.sk
module Main {

fn foo() = extern

fn main() {
    foo();
}

}